syntax = "proto3";
import "DateTimeOffset.proto";
package ProtocolBufferExperiments.Commands;

message CreatePortfolio {
	string objectUuid = 1;
	ProtocolBufferExperiments.Common.DateTimeOffset createTime = 2;
	string moniker = 3;
	string name = 4;
}
