syntax = "proto3";
import "TimeSpan.proto";
import "DateTime.proto";
package ProtocolBufferExperiments.Common;

message DateTimeOffset {
	DateTime DateTime = 1;
	TimeSpan Offset = 2;
}

